1) Moved most enums from LinearR12 to R12Technology. 2) Renamed LinearR12Ansatz to R12Ansatz and moved to R12Technology. 3) Renamed R12RefWavefunction to RefWavefunction.
--HG--
rename : mpqc/src/lib/chemistry/qc/psi/r12ref.cc => mpqc/src/lib/chemistry/qc/psi/ref.cc
rename : mpqc/src/lib/chemistry/qc/psi/r12ref.h => mpqc/src/lib/chemistry/qc/psi/ref.h
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409353

--- a/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
+++ b/mpqc/src/lib/chemistry/qc/mbptr12/Makefile
@@ -52,7 +52,7 @@ CXXSRCS = mbptr12.cc \
   twobodygrid.cc svd.cc linearr12.cc intermeds_g12.cc \
   twoparticlecontraction.cc spin.cc \
   ebc_contribs.cc gbc_contribs.cc approxB.cc Xgen.cc FxFgen.cc \
-  creator.cc approxC.cc approxCp.cc approxApp.cc ansatz.cc \
+  creator.cc approxC.cc approxCp.cc approxApp.cc \
   mp2r12_energy_util.cc compute_VXB_a.cc \
   compute_VXB_a_vbsneqobs.cc \
   gaussianfit.cc r12technology.cc twobody_intermeds.cc \
@@ -69,8 +69,7 @@ CXXSRCS = mbptr12.cc \
   compute_energy_a.cc mp2r12_energy.cc bc_contrib.cc dkh.cc \
   pt2r12.cc rdm.cc
   
-INC = distarray4_memgrp.h \
-ansatz.h                        distarray4_mpiiofile.h \
+INC = distarray4_memgrp.h distarray4_mpiiofile.h \
 distarray4_node0file.h compute_tbint_tensor.h r12int_eval.h \
 container.h                     r12technology.h \
 contract_tbint_tensor.h  contract_tbint_tensors_to_obtensor.h \
