Added MP2-R12/C input using STG correlation factor to input directory.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409362

--- a/mpqc/src/bin/mpqc/validate/Makefile
+++ b/mpqc/src/bin/mpqc/validate/Makefile
@@ -317,7 +317,7 @@ rksch2.in uksch2.in uhfch2opt.in rhfch2opt.in hfch2opt.in \
 hfh2ofreq.in ksh2oco.in ksh2o.in hfh2oopt.in \
 mp2h2o.in zapt2ch2.in
 ifeq ($(RUN_MBPTR12),yes)
-  INPUTINPUTS += mp2r12aph2o.in
+    INPUTINPUTS += mp2r12aph2o.in mp2f12ch2o.in
 endif
 INPUTINPUTS := $(INPUTINPUTS:%=$(INP)/input_%)
 
