Updated simple inputs for MP2-R12/A' to use the new input format for R12 methods.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409364

--- a/mpqc/src/bin/mpqc/validate/ref/input_mp2r12aph2o.in
+++ b/mpqc/src/bin/mpqc/validate/ref/input_mp2r12aph2o.in
@@ -7,7 +7,7 @@ molecule:
 optimize: no
 checkpoint: no
 
-method: MP2-R12/A'
+method: MP2-R12(app=A' f12=r12)
 
 basis: cc-pVDZ
 auxbasis: aug-cc-pVTZ
