--- a/mpqc/src/bin/mpqc/validate/input/mp2r12aph2o.in
+++ b/mpqc/src/bin/mpqc/validate/input/mp2r12aph2o.in
@@ -7,7 +7,7 @@ molecule:
 optimize: no
 checkpoint: no
 
-method: MP2-R12/A'
+method: MP2-R12 (f12=r12 app=A')
 
 basis: cc-pVDZ
 auxbasis: aug-cc-pVTZ
