Compile mbptr12 before df directory. This will be a moot issue once code reorganization is finished.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409423

--- a/mpqc/src/lib/chemistry/qc/Makefile
+++ b/mpqc/src/lib/chemistry/qc/Makefile
@@ -44,7 +44,7 @@ ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_LIBINT2),yes)
 SUBDIRS := $(SUBDIRS) libint2
 endif
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_MBPTR12),yes)
-SUBDIRS := $(SUBDIRS) df mbptr12
+SUBDIRS := $(SUBDIRS) mbptr12 df
 endif
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_CCR12),yes)
 SUBDIRS := $(SUBDIRS) ccr12
