--- a/mpqc/src/lib/chemistry/qc/psi/Makefile
+++ b/mpqc/src/lib/chemistry/qc/psi/Makefile
@@ -15,8 +15,8 @@ INC = psiwfn.h psiinput.h psiexenv.h psifile11.h psicc.h psici.h psiqtorder.h
 
 # R12 functionality depends on MP2-R12 code
 ifeq ($(HAVE_SC_SRC_LIB_CHEMISTRY_QC_MBPTR12),yes)
-CXXSRC := $(CXXSRC) psicc_pt2r12.cc ref.cc rdm.cc psici.cc
-INC := $(INC) psicc_pt2r12.h ref.h rdm.h psici.h
+CXXSRC := $(CXXSRC) psicc_pt2r12.cc psiref.cc psirdm.cc psici.cc
+INC := $(INC) psicc_pt2r12.h psiref.h psirdm.h psici.h
 endif
 
 psitest.testrun: DO_TESTRUN=no
