Psi is called via posix_spawn, not through system, not save memory, etc.
--HG--
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409462

--- a/mpqc/configure.in
+++ b/mpqc/configure.in
@@ -1266,6 +1266,7 @@ AC_FUNC_VPRINTF
 AC_CHECK_FUNCS(strerror sigfillset signal system getpwuid geteuid)
 AC_CHECK_FUNCS(gethostname time ctime)
 AC_CHECK_FUNCS(setrlimit setenv)
+AC_CHECK_FUNCS(posix_spawn)
 
 dnl --------- Check for an isnan and make sure it can be used
 dnl           with iostream (it can't on OS X)
