--- a/mpqc/src/lib/scconfig.h.in
+++ b/mpqc/src/lib/scconfig.h.in
@@ -124,6 +124,9 @@
 /* Define if you have the system function.  */
 #undef HAVE_SYSTEM
 
+/* Define if you have the posix_spawn function.  */
+#undef HAVE_POSIX_SPAWN
+
 /* Define if you have the drand48 function.  */
 #undef HAVE_DRAND48
 
