--- a/mpqc/src/bin/mpqc/validate/ref/psipt2f12_casscfc00ccpvdzaugccpvdzc2v.in
+++ b/mpqc/src/bin/mpqc/validate/ref/psipt2f12_casscfc00ccpvdzaugccpvdzc2v.in
@@ -48,7 +48,7 @@ mpqc: (
     nfzc = 0
     omit_uocc = false
 
-    reference<PsiCI>: (
+    reference<PsiRASSCF>: (
       molecule = $:molecule
       basis = $:basis
       psienv = $:psienv
@@ -61,24 +61,16 @@ mpqc: (
         psienv = $:psienv
       )
 
-      value_accuracy = 1e-11
+      value_accuracy = 1e-9
       nfzc = 1
       ex_lvl = 10
       ras1 = [0 0 0 0]
       ras2 = [3 0 1 1]
       ras3_max = 0
-      rasscf = true
-      detcas_detci_maxiter = 12
-      reorder = after
+      maxiter = 12
       root = 1
-      num_roots = 2
+      nroots = 2
       h0_blocksize = 1000
-      detci_energy_convergence = 7
-      detci_convergence = 4
-      detcas_energy_convergence = 7
-      detcas_convergence = 4
-      detcas_detci_energy_convergence = 9
-      detcas_detci_convergence = 4
 
       valence_obwfn<CLHF>: (
         molecule = $:molecule
