1) Moved all BLAS/LAPACK interfaces to blas.h/lapack.h in math/scmat 2) Added axpy operation on DistArray4 objects
--HG--
rename : mpqc/src/lib/chemistry/qc/mbptr12/blas.cc => mpqc/src/lib/math/scmat/blas.cc
extra : convert_revision : svn%3A0fb12191-db4b-0410-8866-e78deaee71e5/trunk%409523

--- a/mpqc/src/lib/math/scmat/Makefile
+++ b/mpqc/src/lib/math/scmat/Makefile
@@ -47,7 +47,7 @@ CXXSRC = dim.cc \
          blocked.cc \
          blockedvect.cc blockedrect.cc blockeddiag.cc blockedsymm.cc \
          matrix3.cc    vector3.cc    vector3_i.cc \
-         util.cc       stateutil.cc
+         util.cc       stateutil.cc  blas.cc
 
 TESTSRC = disttest.cc localtest.cc repltest.cc blockedtest.cc
 
