prefix "kilo-" is abbreviated with *lower-case* letter k (e.g., kB), whereas MPQC only understood upper-case K. Now it understands both.

--- a/src/lib/util/keyval/keyvaltest.in
+++ b/src/lib/util/keyval/keyvaltest.in
@@ -1,7 +1,7 @@
 % Emacs should use -*- KeyVal -*- mode.
 
 % check size type
-memory = [ 12345 102KB "103 KB" 1.23KB "1.23 KB" 1MB 1GB 1KIB 1MIB 1GIB 1.4GB ]
+memory = [ 12345 102KB "103 KB" 1.23KB "1.23 KB" 1.23kB "1.23 kB" 1MB 1GB 1KIB 1kiB 1MIB 1GIB 1.4GB ]
 
 % check strings
 
