Complete task : implemented finite difference hessians and gradients from energies 1) do_freq in mpqc section of mpqc input is necessary to compute frequencies 2) finite-difference gradients and hessians will be computed if analytic implementations are not available 3) R12 methods are compatible with numerical derivative methods

--- a/src/bin/mpqc/sample/scffreq.in
+++ b/src/bin/mpqc/sample/scffreq.in
@@ -22,8 +22,5 @@ mpqc: (
     basis = $:basis
     memory = 16000000
   )
-% vibrational frequency input
-  freq<MolecularFrequencies>: (
-    molecule = $:molecule
-  )
+  do_freq = true
 )
