--- a/src/bin/mpqc/validate/ref/h2ofrq_mp200sto3gc2voptfrq.in
+++ b/src/bin/mpqc/validate/ref/h2ofrq_mp200sto3gc2voptfrq.in
@@ -55,11 +55,6 @@ mpqc: (
         memory = 32000000
       )
     )
-    hessian<FinDispMolecularHessian>: (
-      point_group<PointGroup>: symmetry = C2V
-      checkpoint = no
-      restart = no
-    )
   )
   optimize = yes
   % optimizer object for the molecular geometry
@@ -73,8 +68,14 @@ mpqc: (
     )
   )
 % vibrational frequency input
+  do_freq = true
   freq<MolecularFrequencies>: (
     point_group<PointGroup>: symmetry = C2V
     molecule = $:molecule
+  )
+  hess<FinDispMolecularHessian>: (
+    point_group<PointGroup>: symmetry = C2V
+    checkpoint = no
+    restart = no
   )
 )
