--- a/src/bin/mpqc/validate/ref/h2ofrq_scfsto3gc1frq.in
+++ b/src/bin/mpqc/validate/ref/h2ofrq_scfsto3gc1frq.in
@@ -48,10 +48,6 @@ mpqc: (
       )
       memory = 32000000
     )
-    hessian<FinDispMolecularHessian>: (
-      checkpoint = no
-      restart = no
-    )
   )
   optimize = no
   % optimizer object for the molecular geometry
@@ -65,7 +61,5 @@ mpqc: (
     )
   )
 % vibrational frequency input
-  freq<MolecularFrequencies>: (
-    molecule = $:molecule
-  )
+  do_freq = true
 )
