--- a/src/lib/chemistry/molecule/moltest.in
+++ b/src/lib/chemistry/molecule/moltest.in
@@ -46,11 +46,15 @@ energy<TaylorMolecularEnergy>: (
 %      [ 1 2 1.5 ]
 %      [ 1 3 0.5 ]
 %      [ 2 3 0.5 ]
-%    ]
+    ]
+  )
+
+grad<FinDispMolecularGradient>: (
+    energy = $:energy
   )
 
 % TaylorMolecularEnergy does work with FinDispMolecularHessian
-xhess<FinDispMolecularHessian>: (
+hess<FinDispMolecularHessian>: (
     energy = $:energy
   )
 
