1) moved fock builders to lcao directory 2) implemented pilot DF-based CLHF
--HG--
rename : src/lib/chemistry/qc/scf/clhfcontrib.cc => src/lib/chemistry/qc/lcao/clhfcontrib.cc
rename : src/lib/chemistry/qc/scf/clhfcontrib.h => src/lib/chemistry/qc/lcao/clhfcontrib.h
rename : src/lib/chemistry/qc/scf/fockbuild.cc => src/lib/chemistry/qc/lcao/fockbuild.cc
rename : src/lib/chemistry/qc/scf/fockbuild.h => src/lib/chemistry/qc/lcao/fockbuild.h
rename : src/lib/chemistry/qc/scf/fockdist.cc => src/lib/chemistry/qc/lcao/fockdist.cc
rename : src/lib/chemistry/qc/scf/fockdist.h => src/lib/chemistry/qc/lcao/fockdist.h
rename : src/lib/chemistry/qc/scf/hsoshfcontrib.cc => src/lib/chemistry/qc/lcao/hsoshfcontrib.cc
rename : src/lib/chemistry/qc/scf/hsoshfcontrib.h => src/lib/chemistry/qc/lcao/hsoshfcontrib.h

--- a/src/lib/chemistry/qc/lcao/Makefile
+++ b/src/lib/chemistry/qc/lcao/Makefile
@@ -46,7 +46,9 @@ CXXSRC = df.cc df_runtime.cc \
   wfnworld.cc transform_ijR.cc \
   transform_ixjy_df.cc  tbint_runtime.cc \
   compute_ixjy.cc compute_ikjy.cc compute_ijxy.cc \
-  compute_iRjS.cc utils.cc
+  compute_iRjS.cc utils.cc \
+  fockbuild.cc clhfcontrib.cc hsoshfcontrib.cc \
+  fockdist.cc
 
 INC = df.h df_runtime.h \
 utils.h utils.impl.h
