--- a/src/lib/chemistry/qc/scf/Makefile
+++ b/src/lib/chemistry/qc/scf/Makefile
@@ -41,9 +41,8 @@ TESTPROGS = scftest focktest
 SRCS = fbclhf.cc scf.cc scfvector.cc scfgradient.cc scfops.cc effh.cc \
        clscf.cc clhf.cc hsosscf.cc hsoshf.cc \
        ossscf.cc osshf.cc tcscf.cc tchf.cc \
-       uscf.cc uhf.cc fockbuild.cc clhfcontrib.cc hsoshfcontrib.cc \
-       tmplinst.cc svd.cc \
-       fockdist.cc
+       uscf.cc uhf.cc \
+       tmplinst.cc svd.cc
 
 LIBOBJ= $(SRCS:%.cc=%.$(OBJSUF))
 
